--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -21,7 +21,7 @@ jobs:
   test:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-12, windows-latest]
+        os: [ubuntu-latest] # , macos-12, windows-latest]
 
     runs-on: ${{ matrix.os }}
 
