--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -42,5 +42,8 @@ jobs:
       - name: Run linter
         run: deno lint
 
+      - name: compile shared lib
+        run: deno task compile_sqlite:linux
+
       - name: Run tests
         run: deno task test
