--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -43,7 +43,7 @@ jobs:
         run: deno lint
 
       - name: compile shared lib
-        run: deno task compile_sqlite:linux
+        run: 'deno task compile_sqlite:linux'
 
       - name: Run tests
         run: deno task test
