--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "develop": "deno run --watch --check sqlite3.ts",
+    "develop": "deno run --watch --check --allow-ffi --allow-read --allow-write --unstable src/mod.ts",
     "test": "deno test --check --unstable --allow-ffi --allow-read --allow-write test",
     "test:watch": "deno test --watch --check --unstable --allow-ffi --allow-read --allow-write test",
     "compile_sqlite:macos": "deno run --check --allow-run=gcc,unzip --allow-read --allow-write deps/compile.ts macos"
