--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,6 @@
 {
   "tasks": {
+    "lint": "deno lint",
     "develop": "deno run --watch --check --allow-ffi --allow-read --allow-write --unstable src/mod.ts",
     "test": "deno test --check --unstable --allow-ffi --allow-read --allow-write test",
     "test:watch": "deno test --watch --check --unstable --allow-ffi --allow-read --allow-write test",
