--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
         run: deno lint
 
       - name: compile shared lib
-        run: 'deno task compile:linux'
+        run: deno task compile
 
       - name: Run tests
         run: deno task test
