ignore cached dependencies

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
       #   run: deno fmt --check
 
       - name: Run linter
-        run: deno lint
+        run: deno task lint --ignore=deno_dependency_cache
 
       - name: compile shared lib
         run: deno task compile
