--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,19 +19,6 @@ jobs:
       - name: Setup repo
         uses: actions/checkout@v3
 
-      - name: Compile sqlite shared library
-        uses: skx/github-action-build@master
-        with:
-          builder: deno task compile
-
-      - name: Upload binary
-        uses: skx/github-action-publish-binaries@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        # TODO what are we actually uploading
-        # with:
-        #   args: 'example-*'
-
       - name: Setup Deno
         uses: denoland/setup-deno@v1
         with:
@@ -40,8 +27,18 @@ jobs:
       - name: Run linter
         run: deno lint
 
-      - name: compile shared lib
-        run: 'deno task compile:linux'
-
       - name: Run tests
         run: deno task test
+
+      - name: Compile SQLite Binary
+        uses: skx/github-action-build@master
+        with:
+          builder: deno task compile
+
+      - name: Upload Binary
+        uses: skx/github-action-publish-binaries@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        # TODO what are we actually uploading
+        # with:
+        #   args: 'example-*'
