--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,10 +36,11 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: binaries/*
+          # file: binaries/*
+          # file_glob: true
+          file: binaries/sqlite_x86_64-unknown-linux-gnu.so
           tag: ${{ github.ref }}
           overwrite: true
-          file_glob: true
           body: "This is my release text"
 
       - name: Upload Binary
