--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,18 +42,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          # file: binaries/*
-          # file_glob: true
-          file: binaries/sqlite_x86_64-unknown-linux-gnu.so
-          asset_name: sqlite_x86_64-unknown-linux-gnu.so
+          file: binaries/*
+          file_glob: true
           tag: ${{ github.ref }}
           overwrite: true
-          body: "This is my release text"
-
-      - name: Upload Binary
-        uses: skx/github-action-publish-binaries@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        # TODO what are we actually uploading
-        # with:
-        #   args: 'example-*'
